# drawio-uml

./: Cargo.toml  README.md
examples/: basic.rs
src/: builders.rs  diagram.rs  element.rs  lib.rs  mod.rs  mxcell.rs  mxfile.rs  mxgeometry.rs  mxgraphmodel.rs  style.rs  userobject.rs
