[package]
name = "drawio_uml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
fast-xml = { version = "0.23.1", features=["serialize", "serde"] }
serde = {version = "1", features = ["derive"] }
serde_derive = "1"
regex = "1"
anyhow =  "1.0"
flate2 = "1"
urlencoding = "2.1.2"